# csv-toolkit

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  shuffle.sln  shuffle.vcxproj  shuffle.vcxproj.filters
include/: toolkit.h
include/internal/: csv_json.cpp  csv_json.hpp  csv_postgres.cpp  csv_postgres.hpp  csv_sql.cpp
src/: csv_search.cpp  csv_sql.cpp  getargs.h  graphs.cpp  main.cpp  print.cpp  print.h  shuffle.h  str.cpp  str.h  svg.cpp  svg.h
tests/: main.cpp
